--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script src="js/script.js" defer></script>
   <link rel="stylesheet" href="css/style.css">
-  <title>Loopstudios</title>
+  <title>Astonish Studio</title>
 </head>
 <body>
   <!--Hero Section-->
