--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </h2>
 
       <p class="max-w-md text-center md:text-left">
-        Founded in 2011, Loopstudios has been producing world-class virtual
+        Founded in 2011, Astonish Studio has been producing world-class virtual
         reality projects for some of the best companies around the globe.
         Our award-winning creations have transformed businesses through
         digital experiences that bind to their brand.
@@ -378,7 +378,7 @@
 
             <!-- Copy -->
             <div class="font-bold">
-              &copy; 2022 Loopstudios. All Rights Reserved
+              &copy; 2025 Astonish Studio. All Rights Reserved
             </div>
           </div>
         </div>
