--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               </div>
               <!-- Item 5 -->
               <div class="h-10 group">
-                <a href="#">Support</a>
+                <a href="#">Workdays</a>
                 <div
                   class="mx-2 group-hover:border-b group-hover:border-blue-50"
                 ></div>
