--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
      <a href="#" class="hover:text-pink-500">Careers</a>
      <a href="#" class="hover:text-pink-500">Events</a>
      <a href="#" class="hover:text-pink-500">Products</a>
-     <a href="#" class="hover:text-pink-500">Support</a>
+     <a href="#" class="hover:text-pink-500">Officetime</a>
    </div>
 
      <div class="max-w-lg mt-32 mb-32 p-4 font-sans text-4xl text-white uppercase border-2 md:p-10 md:m-32 md:mx-0 md:text-6xl">
@@ -119,7 +119,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-deep-earth.jpg"
+              src="images/mobile/pic1.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
@@ -334,7 +334,7 @@
               </div>
               <!-- Item 5 -->
               <div class="h-10 group">
-                <a href="#">Workdays</a>
+                <a href="#">Officetime</a>
                 <div
                   class="mx-2 group-hover:border-b group-hover:border-blue-50"
                 ></div>
