--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Hero Container-->
     <div class="container max-w-6xl ma-auto px-6 py-12">
       <!--Menu/Logo Container-->
-     <nav class="flex items-center justify-between font-bold text-white">
+     <nav class="flex items-center justify-between font-bold text-white bg-none">
       <!--Logo-->
       <img src="images/logo.svg" alt="">
       <!--menu-->
