--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <span class="hamburger-middle"></span>
           <span class="hamburger-bottom"></span>
         </button>
+      </div>
      </nav>
 
      <!--Mobile Menu-->
