--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-deep-earth.jpg"
+              src="images/mobile/pic2.jpg"
               alt=""
               class="w-full md:hidden"
             />
