--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-night-arcade.jpg"
+              src="images/desktop/pic3.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
