--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-night-arcade.jpg"
+              src="images/mobile/pic4.jpg"
               alt=""
               class="w-full md:hidden"
             />
