--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-soccer-team.jpg"
+              src="images/desktop/pic5.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
