--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-soccer-team.jpg"
+              src="images/mobile/pic6.jpg"
               alt=""
               class="w-full md:hidden"
             />
