--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-grid.jpg"
+              src="images/desktop/pic7.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
