--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-grid.jpg"
+              src="images/mobile/pic8.jpg"
               alt=""
               class="w-full md:hidden"
             />
