--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-from-above.jpg"
+              src="images/desktop/pic9.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
