--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-from-above.jpg"
+              src="images/mobile/pic10.jpg"
               alt=""
               class="w-full md:hidden"
             />
