--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-pocket-borealis.jpg"
+              src="images/desktop/pic11.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
