--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-pocket-borealis.jpg"
+              src="images/mobile/pic12.jpg"
               alt=""
               class="w-full md:hidden"
             />
