--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-curiosity.jpg"
+              src="images/desktop/pic13.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
