--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-curiosity.jpg"
+              src="images/mobile/pic14.jpg"
               alt=""
               class="w-full md:hidden"
             />
