--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="group item">
             <!-- Desktop Image -->
             <img
-              src="images/desktop/image-fisheye.jpg"
+              src="images/desktop/pic15.jpg"
               alt=""
               class="hidden w-full duration-200 md:block group-hover:scale-110"
             />
