--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             />
             <!-- Mobile Image -->
             <img
-              src="images/mobile/image-fisheye.jpg"
+              src="images/mobile/pic16.jpg"
               alt=""
               class="w-full md:hidden"
             />
